--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
-layout: page
+<!-- layout: page
 title: "About"
-description: "Hey, this is Hux."
-header-img: "img/about-bg.jpg"
+description: "Hey, this is LunaRun."
+header-img: "img/about-bg.jpg" -->
 ---
 
 <!-- Language Selector -->
